feat: create version objects/ingest state (#1203)
* feat: cbd algorithm implemented

* feat: little cleanup

* feat: CBD extracted models converted to real members

* feat: little cleanup

* feat: ingestion is now able to consume both version and state objects

* feat: fragmentation updated to handle state objects

* fix: ingest test were not updated

* feat: MemberIngestedEvent updated

* WIP: ITs

* feat: RetentionIT extended

* WIP

* feat: ITs finished

* fix: expired test

* feat: unnecessary method removed from test

* fix: merge conflict

* feat: increased coverage

* fix: broken test due to TZs

* fix: broken test due to TZs

* feat: PR naming related remarks implemented

* feat: MembersIngestedEvent now supports bulk as well